Update entity and contract, added new field
