# src/main/java/com/nttdata/customer/persistence/entity/CustomerEntity.java
@@ -1,5 +1,6 @@
 package com.nttdata.customer.persistence.entity;
 
+import java.util.List;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.mongodb.core.mapping.Document;
 import com.nttdata.customer.persistence.entity.enums.ClientType;
@@ -8,7 +9,6 @@ import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
-import lombok.ToString;
 
 /**
  * Entity class representing a customer in the database.
@@ -21,7 +21,6 @@ import lombok.ToString;
 @Setter
 @AllArgsConstructor
 @NoArgsConstructor
-@ToString
 public class CustomerEntity {
 
     @Id
@@ -32,4 +31,23 @@ public class CustomerEntity {
     private DocumentType documentType;
     private String documentNumber;
     private ClientType clientType;
+    private String address;
+    private String email;
+    private List<String> phones;
+
+    @Override
+    public String toString() {
+        return "class CustomerEntity {\n" +
+            "    id: " + id + "\n" +
+            "    name: " + name + "\n" +
+            "    lastName: " + lastName + "\n" +
+            "    reason: " + reason + "\n" +
+            "    documentType: " + documentType + "\n" +
+            "    documentNumber: " + documentNumber + "\n" +
+            "    clientType: " + clientType + "\n" +
+            "    address: " + address + "\n" +
+            "    email: " + email + "\n" +
+            "    phones: " + phones +
+            "\n}";
+    }
 }
